--- a/CM132/styles.css
+++ b/CM132/styles.css
@@ -1,91 +1,71 @@
 /***********************************************************/
 /*      DESKTOP                                            */
-
 @media screen and (min-width: 1200px) {
 	#desktop_1 {
 		background-color: #900;
 		color: #fff;
 	}
 }
-
-
 @media screen and (min-width: 800px) and (max-width: 1200px) and (min-device-width: 1024px) {
 	#desktop_2 {
 		background-color: #900;
 		color: #fff;
 	}
 }	
-
 @media screen and (max-width: 800px) and (min-device-width: 1024px){
 	#desktop_3 {
 		background-color: #900;
 		color: #fff;
-}
-	 
-	
+	}
 }	
-
 /***********************************************************/
 /*      IPAD                                               */
-
 @media screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape){
 	#ipad_1 {
 		background-color: #900;
 		color: #fff;
-}
-	 
-	
+	}
 }	
 
 @media screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait){
-	  #ipad_2 {
-	background-color: #900;
-	color: #fff;
-}
-	 
-	
+	#ipad_2 {
+		background-color: #900;
+		color: #fff;
+	}	
 }	
 
 /***********************************************************/
 /*      IPHONE                                             */
 
 @media screen and (max-width: 568px) and (orientation: landscape){
-	  #iphone_1 {
-	background-color: #990;
-	color: #fff;
+	#iphone_1 {
+		background-color: #990;
+		color: #fff;
+	}
+	.myDisplay{
+		font-size: smaller;
+	}
 }
-.myDisplay{
-	font-size: smaller;
-}
-}
-
-
-
 @media screen and (max-width: 480px) and (orientation: landscape){
-	  #iphone_1 {
-	background-color: #900;
-	color: #fff;
+	#iphone_1 {
+		background-color: #900;
+		color: #fff;
+	}
+	.myDisplay{
+		font-size: smaller;
+	}
 }
-.myDisplay{
-	font-size: smaller;
-}
-}
-
 @media screen and (max-width: 480px) and (orientation: portrait){
-	  #iphone_2 {
-	background-color: #900;
-	color: #fff;
+	#iphone_2 {
+		background-color: #900;
+		color: #fff;
+	}
+	.myDisplay{
+		font-size: larger;
+	}
 }
-
-.myDisplay{
-	font-size: larger;
-}
-}
-
-
 /***********************************************************/
 /*      PRINT                                              */
-
 @media only print {
   body {
 	width: 100%;
@@ -96,9 +76,8 @@
 	
   }
 }
-
 /***********************************************************/
-
+/*     REGLES COMMUNES                                     */
 body {
 	text-align: center;
 	margin: 0px;
@@ -119,5 +98,4 @@ body {
 	color: #666;
 	border-radius: 10px;
 	box-shadow: rgba(0, 0, 0, 0.33) 0px 3px 6px 0px;
-	
 }
