--- a/CM132/00/styles.css
+++ b/CM132/00/styles.css
@@ -54,6 +54,7 @@
 	.myDisplay{
 		font-size: smaller;
 	}
+	body{width: 320px}
 }
 @media screen and (max-width: 480px) and (orientation: portrait){
 	#iphone_2 {
@@ -63,6 +64,7 @@
 	.myDisplay{
 		font-size: larger;
 	}
+	body{width: 320px}
 }
 /***********************************************************/
 /*      PRINT                                              */
