--- a/CM132/00/styles.css
+++ b/CM132/00/styles.css
@@ -64,7 +64,7 @@
 	.myDisplay{
 		font-size: larger;
 	}
-	body{width: 320px}
+	body{width: 320px;}
 }
 /***********************************************************/
 /*      PRINT                                              */
