--- a/CM132/00/styles.css
+++ b/CM132/00/styles.css
@@ -35,7 +35,7 @@
 }	
 
 /***********************************************************/
-/*      IPHONE                                             */
+/*      IPHONE SE                                          */
 
 @media screen and (max-width: 568px) and (orientation: landscape){
 	#iphone_se_land {
