--- a/psycho/styles.css
+++ b/psycho/styles.css
@@ -43,6 +43,21 @@ body{
 	text-align:center;
 	color:#ccc;
 }
+#error{
+	position:absolute;
+	width:50px;
+	height:50px;
+	left:calc(50% + 145px);
+	bottom:-145px;
+	border-radius:5px 5px 36px 5px;
+	background-color: #f00;
+	color:#fff;
+	font-size: 60px;
+	text-align: center;
+	overflow:hidden;
+	line-height: 55px;
+	display:none;
+}
 .ou{font-size: 14px;}
 #right{
 	right:calc(50vw - 450px);
